# data-viewer

./: .dockerignore  .gitignore  AUTOSCALING-QUOTA-FIX.md  Cargo.toml  DEPLOYMENT-ORDER-FIX.md  DEPLOYMENT-STATUS.md  README.md  WORKFLOW-FIXED.md  WORKFLOW-VALIDATION.md  cleanup-autoscaling.sh  force-cleanup-autoscaling.sh  test-actual-bash-syntax.sh  test-apprunner-deploy-logic.sh  test-deployment-order.sh  test-recreate-flow.sh  test-service-not-found.sh  test-wait-for-service-logic.sh  verify-new-workflow.sh  verify-workflow-order.sh
.github/actions/dashboard-apprunner-deploy/: action.yml
.github/actions/dashboard-build-image/: action.yml
.github/actions/dashboard-terraform/: action.yml
.github/workflows/: dashboard-apply.yml  dashboard-deploy.yml  dashboard-image.yml  dashboard-recreate.yml  dashboard.yml  deploy-oauth-proxy.yml  oauth-proxy.yml  test-manual-trigger.yml
common/: Cargo.toml
common/src/: aws_logging.rs  db_client.rs  lib.rs  logging.rs  parameter_store.rs  s3_config.rs  settings.rs
dashboard/: .dockerignore  Cargo.toml  apprunner.yaml  config.json
dashboard/deploy/: Dockerfile  README.md  startup.sh
dashboard/deploy/terraform/: main.tf  outputs.tf  terraform.tfvars  tfplan  variables.tf
dashboard/src/: main.rs
dashboard/src/frontend/: dashboard.html  sidebar.html  strategy.html
dashboard/src/frontend/css/: base.css  strategies.css
dashboard/src/frontend/js/: dashboard.js  db_records.js  watermark_heatmap.js
dashboard/src/models/: account.rs  metrics.rs  mod.rs  performance.rs  riskdata.rs  settings.rs  strategy.rs  symbol.rs  watermark.rs
dashboard/src/service/: common.rs  metrics.rs  mod.rs  performance.rs  strategy.rs  symbols.rs  universe.rs  watermarks.rs
docs/: deployment-workflows.md
frontend/: dashboard.html  index.html  strategy.html
frontend/css/: base.css  dashboard.css
oauth-proxy/: Cargo.toml  steps.txt
oauth-proxy/deploy/: api-gateway.tf  logs.tf  main.tf  output.tf  terraform.tfvars  variables.tf
oauth-proxy/src/: main.rs  secrets.rs
oauth-proxy/test/: ping-request.json
src/: db_client.rs  logging.rs  main.rs  settings.rs
src/models/: performance.rs  riskdata.rs  strategy.rs
