[package]
name = "data-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
] }
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
clap = { version = "4.3.21", features = ["derive"] }
anyhow = "1.0.72"
exitcode = "1.1.2"
tracing = "0.1.37"
rust_decimal = { version = "1.34.2", features = ["serde", "serde-with-float"] }
rust_decimal_macros = "1.34.2"
tokio-util = "0.7.8"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
