[package]
name = "common"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "std"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
] }
