[package]
name = "common"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "std", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
] }

tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "tracing",
] }

aws-config = { version = "1.8.7", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.104.0", features = [
    "behavior-version-latest",
] }
aws-sdk-s3 = { version = "1.107.0", features = ["behavior-version-latest"] }
aws-sdk-ssm = { version = "1.95.0", features = ["behavior-version-latest"] }
