[package]
name = "data-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { version = "1.0.143", features = ["raw_value"] }
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
] }
uuid = { version = "1.18.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
exitcode = "1.1.2"
tracing = "0.1.41"
rust_decimal = { version = "1.37.2", features = ["serde", "serde-with-float"] }
rust_decimal_macros = "1.37.1"
tokio-util = "0.7.16"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "std"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
common = { path = "../common" }
