[package]
name = "oauth-proxy"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "oauth-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
common = { path = "../common" }
axum = "0.8.4"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.97.0"
aws-sdk-ssm = "1.93.0"                                                     # Use the latest version available
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
lambda_http = "0.17.0"
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["json"] }
openssl = { version = "0.10.73", features = ["vendored"] }
